--- a/border-width-0.5.html
+++ b/border-width-0.5.html
@@ -50,7 +50,7 @@
       <div class="content"></div>
 
       <!-- accept="image/*" capture="camera"  直接调用相机
-      accept="image/*"   调用相机 图片或者相册 -->
+      accept="image/*"   调用相机 测距 ap-ec 图片或者相册 -->
       <input type="file" accept="image/*" capture="camera" size="30" />
     </div>
   </body>
